<resources>
    <string name="app_name">Naucera</string>
    <string name="logo">Logo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="developed_by_satish_www_skwebs_github_io">Developed by Satish (www.skwebs.github.io)</string>
    <string name="show_users_list">Show Users List</string>
    <string name="API_BASE_URL">https://anshumemorial.in/lv8_api/api</string>
    <string name="welcome">Welcome Back</string>
    <string name="in_naucera_family">in Naucera family.</string>
    <string name="logout">Logout</string>
    <string name="left_side_line">Left side line</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="change_phone_no">Change Phone no.</string>
    <string name="default_notification_channel_id">PushNotifications</string>
</resources>